gap bug fixed

--- a/src/styles/dropDownSelect.css
+++ b/src/styles/dropDownSelect.css
@@ -47,6 +47,8 @@
   padding: .78571429em 0.5em .78571429em;
   vertical-align: baseline;
   align-self: center;
+  max-height: 33px;
+  overflow-y: auto;
 }
 
 .activeItemTextActive{
